<resources>

    <string name="pilih">Bidang Usaha:</string>
    <string name="hasil">klikHasil</string>
    <string name="submit">Submit</string>
    <string name="output">Mata Kuliah yang dipilih :</string>
    <string name="MK1">Jasa Pelaksana Konstruksi Pemasangan Pendingin Udara (Air Conditioner</string>
    <string name="MK2">Jasa Pelaksana Konstruksi Pemasangan Pipa air (Plumbing) Dalam Bangunan dan Salurannya</string>
    <string name="MK3">Jasa Pelaksana Konstruksi Pemasangan Pipa Gas Dalam Bangunan</string>
    <string name="MK4">Jasa Pelaksana Konstruksi Insulasi Dalam Bangunan</string>
    <string name="MK5">Jasa Pelaksana Konstruksi Pemasangan Lift dan Tangga Berjalan</string>
    <string name="MK6">Jasa Pelaksana Konstruksi Pertambangan dan Manufaktur</string>
    <string name="MK7">Jasa Pelaksana Konstruksi Instalasi Alat Angkut dan Alat Angkat</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string-array name="bidang_usaha_array">
        <item>Jasa Pelaksana Konstruksi Pemasangan Pendingin Udara (Air Conditioner)</item>
        <item>Jasa Pelaksana Konstruksi Pemasangan Pipa air (Plumbing) Dalam Bangunan dan Salurannya</item>
        <item>Jasa Pelaksana Konstruksi Pemasangan Pipa Gas Dalam Bangunan</item>
        <item>Jasa Pelaksana Konstruksi Insulasi Dalam Bangunan</item>
        <item>Jasa Pelaksana Konstruksi Pemasangan Lift dan Tangga Berjalan</item>
        <item>Jasa Pelaksana Konstruksi Pertambangan dan Manufaktur</item>
        <item>Jasa Pelaksana Konstruksi Instalasi Thermal, Bertekanan, Minyak dan Gas, Geothermal (Pekerjaan Rekayasa)</item>
        <item>Jasa Pelaksana Konstruksi Instalasi Alat Angkut dan Alat Angkat</item>
        <item>Jasa Pelaksana Konstruksi Instalasi Perpipaan, Gas, Energi (Pekerjaan Rekayasa)</item>
        <item>Jasa Pelaksana Konstruksi Instalasi Pembangkit Tenaga Listrik Semua Daya</item>
        <item>Jasa Pelaksana Konstruksi Instalasi Jaringan Transmisi Tenaga Listrik Tegangan Tinggi/Ekstra Tegangan Tinggi</item>
    </string-array>

    <string-array name="pilihkelas">
        <item>--Pilih--</item>
        <item>A</item>
        <item>B</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
    </string-array>

    <string-array name="pilihagama">
        <item>--Pilih--</item>
        <item>Islam</item>
        <item>Katolik</item>
        <item>Protestan</item>
        <item>Budha</item>
        <item>Hindu</item>
        <item>Konghucu</item>
    </string-array>
    <string name="hello">Hello World, form_activity!</string>
    <string name="app_name">PT Indonesia Hebat Pertama</string>
    <string name="formTitle">OODS Join</string>
    <string name="namaTitle">Nama Perusahaan</string>
    <string name="nrpTitle">Nama Pemimpin</string>
    <string name="jurTitle">Email</string>
    <string name="angkatanTitle">Mobile</string>

    <string name="SubmitTitle">Save</string>
    <string name="CancelTitle">Cancel</string>

    <string name="JK1">A</string>
    <string name="JK2">B</string>
    <string name="title_activity_customer">customer</string>
    <string name="tab_text_1">Join</string>
    <string name="tab_text_2">History</string>
    <string name="Customer">Customer</string>
    <string name="Guest">Guest</string>

    <!--<string name="A">A</string>-->
    <!--<string name="B">B</string>-->
    <!--<string name="C">C</string>-->
    <!--<string name="D">D</string>-->
    <!--<string name="E">E</string>-->
    <!--<string name="F">F</string>-->
    <!--<string name="Pilih">&#45;&#45;Pilih&#45;&#45;</string>-->
    <!--<string name="Islam">Islam</string>-->
    <!--<string name="Katolik">Katolik</string>-->
    <!--<string name="Protestan">Protestan</string>-->
    <!--<string name="Budha">Budha</string>-->
    <!--<string name="Hindu">Hindu</string>-->
    <!--<string name="Konghucu">Konghucu</string>-->
    <!--<string name="title_activity_crud">crud</string>-->
    <!--<string name="tab_text_1">Tab 1</string>-->
    <!--<string name="tab_text_2">Tab 2</string>-->
    <!--<string name="title_activity_main2">Main2Activity</string>-->
    <!--<string name="title_activity_basic">Basic</string>-->
    <string name="action_About">About</string>
    <string name="action_status">Status</string>
    <string name="action_signout">SignOut</string>
    <string name="section_format">Format</string>
    <string name="action_settings">Setting</string>
    <string name="coupons">Coupons</string>
    <string name="stores">Stores</string>
    <string name="cashback">Cashback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web">https://www.oodsgroup.com</string>
    <string name="elektrikal_mekanikal"><![CDATA[Elektrikal & Mekanikal]]></string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="pemimpin">Pemimpin</string>

</resources>
