<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".component.form_activity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/judulForm"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/formTitle"
            android:minHeight="60dp"
            android:textColor="#32CD32"
            android:textStyle="bold"
            android:textSize="10pt">
        </TextView>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"></RelativeLayout>

        <EditText
            android:id="@+id/txtNamaPerusahaan"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentTop="true"
            android:hint="@string/namaTitle"></EditText>

        <EditText
            android:id="@+id/txtNamaPimpinan"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/nrpTitle"></EditText>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/jurTitle"></EditText>

        <EditText
            android:id="@+id/txtMobile"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/angkatanTitle"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bidang Usaha"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/pilJK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/JKlist"
            android:prompt="@string/JK1"></Spinner>

        <TextView
            android:text="Bidang Jasa"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Spinner
            android:id="@+id/pilJK2"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:prompt="@string/JK1"
            android:entries="@array/JKlist"
            >
        </Spinner>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#32CD32"
            android:text="@string/SubmitTitle"></Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="#eceff1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Nama Perusahaan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Nama Pimpinan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Emai" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Mobile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Bidang Usaha" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Bidang Jasa" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=":" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=":" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=":" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=":" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=":" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=":" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hasil_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/hasil_nik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/hasil_umur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/hasil_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/hasil_institusi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>